--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,4 +19,14 @@
 
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
+    color: white;
+}
+
+body {
+    background: #1D4350; /* fallback for old browsers */
+    background: -webkit-gradient(linear, 0 0, 100% 0, from(#1D4350), to(#A43931));
+    background: -webkit-linear-gradient(to left, #1D4350, #A43931);
+    background: -moz-linear-gradient(to left, #1D4350, #A43931);
+    background: -o-linear-gradient(to left, #1D4350, #A43931);
+    background: linear-gradient(to left, #1D4350, #A43931); /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
